--- a/game.html
+++ b/game.html
@@ -1,110 +1,108 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walz Shop - Top Up Game</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Walz Shop - Top Up Game</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <div class="container">
-        <header class="header">
-            <a href="index.html" class="back-btn"><i class="fas fa-arrow-left"></i></a>
-            <a href="index.html" class="logo-link">
-                <img src="https://files.catbox.moe/dpr6d2.jpg" alt="Walz Shop Logo" class="logo">
-            </a>
-        </header>
+  <div class="container">
+    <header class="header">
+      <a href="index.html" class="back-btn"><i class="fas fa-arrow-left"></i></a>
+      <a href="index.html" class="logo-link">
+        <img src="https://files.catbox.moe/dpr6d2.jpg" alt="Walz Shop Logo" class="logo">
+      </a>
+    </header>
 
-        <section class="game-info">
-            <div class="game-header">
-                <img id="game-icon" src="" alt="Game Icon" class="game-icon">
-                <h1 id="game-title" class="game-title"></h1>
-            </div>
-            <p id="game-description" class="guide-text"></p>
-        </section>
+    <section class="game-info">
+      <div class="game-header">
+        <img id="game-icon" src="" alt="Game Icon" class="game-icon">
+        <h1 id="game-title" class="game-title"></h1>
+      </div>
+      <p id="game-description" class="guide-text"></p>
+    </section>
 
-        <main>
-            <section class="step-section" id="step1">
-                <h3><i class="fas fa-user"></i> Masukkan Akun</h3>
-                <div class="input-group">
-                    <label for="user-id">User ID</label>
-                    <input type="text" id="user-id" name="user-id" placeholder="Masukkan User ID Anda" required>
-                </div>
-                <div class="input-group" id="server-id-group" style="display: none;">
-                    <label for="server-id">Server ID</label>
-                    <input type="text" id="server-id" name="server-id" placeholder="Masukkan Server ID Anda (mis: 1234)">
-                </div>
-            </section>
-
-            <section class="step-section" id="step2">
-                <h3><i class="fas fa-gem"></i> Pilih Nominal Top Up</h3>
-                <div id="product-grid" class="product-grid">
-                    </div>
-            </section>
-
-            <section class="step-section" id="step3">
-                <h3><i class="fas fa-credit-card"></i> Pilih Metode Pembayaran</h3>
-                <div id="payment-grid" class="payment-grid">
-                    </div>
-            </section>
-            
-            <section class="step-section" id="step4">
-                <h3><i class="fa-solid fa-list-check"></i> Ringkasan & Checkout</h3>
-                <div class="voucher-input-group">
-                    <input type="text" id="voucher-input" placeholder="Masukkan kode promo (opsional)">
-                    <button id="voucher-btn" class="btn btn-voucher"><i class="fa-solid fa-tag"></i> Gunakan</button>
-                    <button id="voucher-list-btn" class="btn btn-voucher-list"><i class="fa-solid fa-percent"></i></button>
-                </div>
-                <p id="voucher-status" class="status-text"></p>
-
-                <table class="summary-table">
-                    <tr>
-                        <td>Nominal</td>
-                        <td id="summary-product">-</td>
-                    </tr>
-                    <tr id="summary-discount-row" style="display: none;">
-                        <td>Diskon</td>
-                        <td id="summary-discount">-</td>
-                    </tr>
-                    <tr>
-                        <td>Metode Bayar</td>
-                        <td id="summary-payment">-</td>
-                    </tr>
-                </table>
-                <div class="summary-total">
-                    <span>Total Harga</span>
-                    <span id="summary-total">-</span>
-                </div>
-                <button class="btn btn-primary btn-block checkout-btn" id="checkout-btn" disabled>Beli Sekarang</button>
-            </section>
-        </main>
-    </div>
-
-    <div id="modal-overlay" class="modal-overlay">
-        <div id="checkout-modal" class="modal modal-content"></div>
-        <div id="promo-list-modal" class="modal modal-content modal-list"></div>
-        <div id="error-modal" class="modal modal-content"></div>
-    </div>
-
-    <footer class="footer">
-        <div class="footer-content">
-            <div class="social-icons">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-            </div>
-            <ul class="footer-links">
-                <li><a href="#">Tentang Kami</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Kebijakan Privasi</a></li>
-                <li><a href="#">Syarat & Ketentuan</a></li>
-            </ul>
-            <p>&copy; 2024 Walz Shop. All Rights Reserved.</p>
+    <main>
+      <section class="step-section" id="step1">
+        <h3><i class="fas fa-user"></i> Masukkan Akun</h3>
+        <div class="input-group">
+          <label for="user-id">User ID</label>
+          <input type="text" id="user-id" placeholder="Masukkan User ID Anda" required>
         </div>
-    </footer>
+        <div class="input-group" id="server-id-group" style="display: none;">
+          <label for="server-id">Server ID</label>
+          <input type="text" id="server-id" placeholder="Masukkan Server ID Anda (mis: 1234)">
+        </div>
+      </section>
 
-    <script src="script.js"></script>
+      <section class="step-section" id="step2">
+        <h3><i class="fas fa-gem"></i> Pilih Nominal Top Up</h3>
+        <div id="product-grid" class="product-grid"></div>
+      </section>
+
+      <section class="step-section" id="step3">
+        <h3><i class="fas fa-credit-card"></i> Pilih Metode Pembayaran</h3>
+        <div id="payment-grid" class="payment-grid"></div>
+      </section>
+
+      <section class="step-section" id="step4">
+        <h3><i class="fa-solid fa-list-check"></i> Ringkasan & Checkout</h3>
+        <div class="voucher-input-group">
+          <input type="text" id="voucher-input" placeholder="Masukkan kode promo (opsional)">
+          <button id="voucher-btn" class="btn btn-voucher"><i class="fa-solid fa-tag"></i> Gunakan</button>
+          <button id="voucher-list-btn" class="btn btn-voucher-list"><i class="fa-solid fa-percent"></i></button>
+        </div>
+        <p id="voucher-status" class="status-text"></p>
+
+        <table class="summary-table">
+          <tr>
+            <td>Nominal</td>
+            <td id="summary-product">-</td>
+          </tr>
+          <tr id="summary-discount-row" style="display: none;">
+            <td>Diskon</td>
+            <td id="summary-discount">-</td>
+          </tr>
+          <tr>
+            <td>Metode Bayar</td>
+            <td id="summary-payment">-</td>
+          </tr>
+        </table>
+        <div class="summary-total">
+          <span>Total Harga</span>
+          <span id="summary-total">-</span>
+        </div>
+        <button class="btn btn-primary btn-block checkout-btn" id="checkout-btn" disabled>Beli Sekarang</button>
+      </section>
+    </main>
+  </div>
+
+  <div id="modal-overlay" class="modal-overlay">
+    <div id="checkout-modal" class="modal modal-content"></div>
+    <div id="promo-list-modal" class="modal modal-content modal-list"></div>
+    <div id="error-modal" class="modal modal-content"></div>
+  </div>
+
+  <footer class="footer">
+    <div class="footer-content">
+      <div class="social-icons">
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+      </div>
+      <ul class="footer-links">
+        <li><a href="#">Tentang Kami</a></li>
+        <li><a href="#">FAQ</a></li>
+        <li><a href="#">Kebijakan Privasi</a></li>
+        <li><a href="#">Syarat & Ketentuan</a></li>
+      </ul>
+      <p>&copy; 2024 Walz Shop. All Rights Reserved.</p>
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
