--- a/game.html
+++ b/game.html
@@ -12,7 +12,7 @@
         <a href="index.html" class="logo">WalzShop</a>
         <div class="nav-links">
             <a href="index.html#games">Top Up</a>
-            <a href="index.html#payments">Pembayaran</a>
+            <a href="#payments">Pembayaran</a>
             <a href="index.html#contact">Hubungi Kami</a>
         </div>
         <div class="nav-toggle" id="navToggle">
@@ -39,7 +39,7 @@
                     </div>
             </section>
 
-            <section class="form-section">
+            <section id="payments" class="form-section">
                 <h3>3. Pilih Metode Pembayaran</h3>
                 <div class="payment-grid" id="paymentGrid">
                     </div>
