--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
 
         <section id="games" class="section">
             <h2 class="section-title">Pilih Game Favoritmu</h2>
-            <div class="game-grid">
-                </div>
+            <div class="game-grid" id="gameGrid">
+            </div>
         </section>
 
         <section id="contact" class="section">
             <h2 class="section-title">Hubungi Kami</h2>
-            <div class="contact-card">
+            <div class="contact-card card-simple">
                 <p>Ada pertanyaan atau butuh bantuan? Hubungi kami melalui WhatsApp.</p>
-                <a href="https://wa.me/6282298902274" class="btn-whatsapp" target="_blank">
-                    <i class="fa-brands fa-whatsapp"></i> Chat via WhatsApp
+                <a href="https://wa.me/6282298902274" class="btn btn-whatsapp" target="_blank">
+                    <i class="fa-brands fa-whatsapp btn-icon"></i> Chat via WhatsApp
                 </a>
             </div>
         </section>
