--- a/index.html
+++ b/index.html
@@ -3,58 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WalzShop - Top Up Game Murah dan Cepat</title>
+    <title>Walz Shop - Top Up Games Murah & Cepat</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <meta name="description" content="Situs top up game terpercaya dan termurah. Layanan top up diamond Free Fire, Mobile Legends, dan game populer lainnya. Proses cepat dan aman 24/7.">
-    <meta name="keywords" content="top up, top up game, top up diamond, top up mlbb, top up ff, walzshop, game online, top up murah, top up cepat">
-    <meta name="author" content="WalzShop">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
-    <header class="navbar">
-        <a href="index.html" class="logo">WalzShop</a>
-        <div class="nav-links">
-            <a href="#games">Top Up</a>
-            <a href="#contact">Hubungi Kami</a>
-        </div>
-        <div class="nav-toggle" id="navToggle">
-            <i class="fa-solid fa-bars"></i>
+    <header class="header">
+        <div class="container">
+            <a href="index.html" class="logo">
+                <i class="fas fa-gem logo-icon"></i>
+                <span class="logo-text">Walz Shop</span>
+            </a>
+            <nav class="nav">
+                <a href="index.html"><i class="fas fa-home"></i> Beranda</a>
+                <a href="#"><i class="fas fa-info-circle"></i> Tentang</a>
+                <a href="#"><i class="fas fa-headset"></i> Kontak</a>
+            </nav>
         </div>
     </header>
 
-    <main>
+    <main class="main">
+        <div class="container">
+            <section class="promo-section">
+                <div class="slider" id="promo-slider-container">
+                    <div class="slider__track" id="promo-slider"></div>
+                    <div class="slider__dots" id="slider-dots"></div>
+                </div>
+            </section>
 
-        <section class="hero">
-            <div class="slider-container">
-                <div class="slider"></div>
-                <div class="slider-dots"></div>
-            </div>
-        </section>
-
-        <section id="games" class="section">
-            <h2 class="section-title">Pilih Game Favoritmu</h2>
-            <p class="section-subtitle">Top up dengan cepat, aman, dan harga terjangkau.</p>
-            <div class="game-grid" id="gameGrid">
-            </div>
-        </section>
-
-        <section id="contact" class="section">
-            <h2 class="section-title">Hubungi Kami</h2>
-            <div class="contact-card card-simple">
-                <p>Ada pertanyaan atau butuh bantuan? Tim kami siap melayani Anda.</p>
-                <a href="https://wa.me/6282298902274" class="btn btn-whatsapp" target="_blank">
-                    <i class="fa-brands fa-whatsapp btn-icon"></i> Chat via WhatsApp
-                </a>
-            </div>
-        </section>
-
+            <section class="games-section">
+                <h2 class="section-title">Pilih Game Favoritmu</h2>
+                <div class="games-grid" id="games-grid">
+                    </div>
+            </section>
+        </div>
     </main>
 
     <footer class="footer">
-        <div class="footer-content">
-            <p>&copy; 2024 WalzShop. All Rights Reserved.</p>
+        <div class="container">
+            <p>&copy; 2025 Walz Shop. Semua hak dilindungi.</p>
+            <div class="footer-links">
+                <a href="#">Kebijakan Privasi</a>
+                <a href="#">Syarat & Ketentuan</a>
+            </div>
+            <div class="social-media">
+                <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+            </div>
         </div>
     </footer>
 
