--- a/index.html
+++ b/index.html
@@ -3,32 +3,59 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Walz Shop - Top Up Game Murah</title>
+  <title>Walz Shop - Top Up Games Murah & Cepat</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-  <!-- Header -->
-  <header class="header glass-card">
-    <div class="logo">🎮 Walz Shop</div>
+  <header class="header">
+    <div class="container">
+      <a href="index.html" class="logo">
+        <i class="fas fa-gem logo-icon"></i>
+        <span class="logo-text">Walz Shop</span>
+      </a>
+      <nav class="nav">
+        <a href="index.html"><i class="fas fa-home"></i> Beranda</a>
+        <a href="#"><i class="fas fa-info-circle"></i> Tentang</a>
+        <a href="#"><i class="fas fa-headset"></i> Kontak</a>
+      </nav>
+    </div>
   </header>
 
-  <!-- Promo Slider -->
-  <section class="promo-section">
-    <div class="slider__track" id="promo-slider"></div>
-    <div class="slider__dots" id="slider-dots"></div>
-  </section>
+  <main class="main">
+    <div class="container">
+      <!-- Promo Section -->
+      <section class="promo-section">
+        <div class="slider" id="promo-slider-container">
+          <div class="slider__track" id="promo-slider"></div>
+          <div class="slider__dots" id="slider-dots"></div>
+        </div>
+      </section>
 
-  <!-- Games Section -->
-  <section class="games-section">
-    <h2 class="section-title">🔥 Pilih Game Favoritmu</h2>
-    <div class="games-grid" id="games-grid"></div>
-  </section>
+      <!-- Games Section -->
+      <section class="games-section">
+        <h2 class="section-title">🎮 Pilih Game Favoritmu</h2>
+        <div class="games-grid" id="games-grid"></div>
+      </section>
+    </div>
+  </main>
 
-  <footer class="footer glass-card">
-    <p>© 2025 Walz Shop. Semua Hak Dilindungi.</p>
+  <footer class="footer">
+    <div class="container">
+      <p>&copy; 2025 Walz Shop. Semua hak dilindungi.</p>
+      <div class="footer-links">
+        <a href="#">Kebijakan Privasi</a>
+        <a href="#">Syarat & Ketentuan</a>
+      </div>
+      <div class="social-media">
+        <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+      </div>
+    </div>
   </footer>
 
-  <div id="modal-overlay" class="modal-overlay"></div>
   <script src="script.js"></script>
 </body>
 </html>
