--- a/game.html
+++ b/game.html
@@ -1,115 +1,112 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Walz Shop - Top Up</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Walz Shop - Top Up Game</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="header">
-    <div class="container">
-      <a href="index.html" class="logo">
-        <i class="fas fa-gem logo-icon"></i>
-        <span class="logo-text">Walz Shop</span>
-      </a>
-      <nav class="nav">
-        <a href="index.html"><i class="fas fa-home"></i> Beranda</a>
-        <a href="#"><i class="fas fa-info-circle"></i> Tentang</a>
-        <a href="#"><i class="fas fa-headset"></i> Kontak</a>
-      </nav>
-    </div>
-  </header>
 
-  <main class="main">
-    <div class="container">
-      <a href="index.html" class="btn-back"><i class="fas fa-arrow-left"></i> Kembali</a>
-
-      <!-- Banner Game -->
-      <div class="game-banner glass-card">
-        <img id="game-banner" class="game-banner-image" src="" alt="Game Banner">
-        <div>
-          <h1 class="game-name-h1"></h1>
-          <p class="game-subtitle">Top Up cepat, murah, & aman 🚀</p>
+    <header class="header">
+        <div class="container">
+            <nav class="navbar">
+                <a href="index.html" class="logo">Walz Shop</a>
+            </nav>
         </div>
-      </div>
+    </header>
 
-      <!-- Form Top Up -->
-      <div class="form-container">
-        <form id="topup-form">
-          <!-- User ID -->
-          <div class="form-group">
-            <label for="user-id"><i class="fas fa-user"></i> Masukkan User ID</label>
-            <p class="game-description"></p>
-            <div class="input-group">
-              <input type="text" id="user-id" placeholder="Contoh: 12345678" required>
-              <input type="text" id="server-id" placeholder="Server ID (Opsional)" class="server-input">
-            </div>
-          </div>
+    <main class="main">
+        <div class="container game-page-container">
+            <section class="game-info-section">
+                <div class="game-banner-container">
+                    <img id="game-banner" alt="Game Banner">
+                </div>
+                <div class="game-info">
+                    <h1 class="game-name-h1"></h1>
+                    <p class="game-description"></p>
+                </div>
+            </section>
 
-          <!-- Produk -->
-          <div class="form-group">
-            <label><i class="fas fa-dollar-sign"></i> Pilih Nominal Top Up</label>
-            <div class="product-grid" id="product-grid"></div>
-          </div>
-          
-          <!-- Metode Pembayaran -->
-          <div class="form-group">
-            <label><i class="fas fa-credit-card"></i> Pilih Metode Pembayaran</label>
-            <div class="payment-grid" id="payment-grid"></div>
-          </div>
-          
-          <!-- Ringkasan -->
-          <div class="form-group">
-            <label><i class="fas fa-receipt"></i> Ringkasan Pembayaran</label>
-            <div class="summary-card">
-              <table class="summary-table">
-                <tr><td>Produk</td><td id="summary-product">-</td></tr>
-                <tr><td>Metode Bayar</td><td id="summary-payment">-</td></tr>
-                <tr id="summary-discount-row" style="display:none;"><td>Diskon Voucher</td><td id="summary-discount">-</td></tr>
-              </table>
-              <div class="summary-total">
-                <span>Total Pembayaran</span>
-                <span id="summary-total">Rp 0</span>
-              </div>
-            </div>
-          </div>
+            <section class="form-section">
+                <div class="step-card">
+                    <div class="step-header">
+                        <span class="step-number">1</span>
+                        <h3 class="step-title">Masukkan User ID</h3>
+                    </div>
+                    <div class="input-group">
+                        <input type="text" id="user-id" placeholder="Masukkan User ID">
+                        <input type="text" id="server-id" placeholder="Masukkan Server ID (jika ada)" style="display: none;">
+                    </div>
+                </div>
 
-          <!-- Voucher -->
-          <div class="form-group">
-            <label><i class="fas fa-tag"></i> Kode Voucher (Opsional)</label>
-            <div class="voucher-input-group">
-              <input type="text" id="voucher-input" placeholder="Masukkan kode voucher">
-              <button type="button" id="voucher-btn">Terapkan</button>
-            </div>
-            <div class="voucher-extra">
-              <span id="voucher-status" class="status-text"></span>
-              <button type="button" id="voucher-list-btn" class="text-button">Lihat Daftar Promo</button>
-            </div>
-          </div>
+                <div class="step-card">
+                    <div class="step-header">
+                        <span class="step-number">2</span>
+                        <h3 class="step-title">Pilih Nominal Top-Up</h3>
+                    </div>
+                    <div class="product-grid" id="product-grid">
+                        </div>
+                </div>
 
-          <!-- Checkout -->
-          <button type="button" id="checkout-btn" class="btn btn-block btn-confirm pulse" disabled>Beli Sekarang</button>
-        </form>
-      </div>
+                <div class="step-card">
+                    <div class="step-header">
+                        <span class="step-number">3</span>
+                        <h3 class="step-title">Pilih Metode Pembayaran</h3>
+                    </div>
+                    <div class="payment-grid" id="payment-grid">
+                        </div>
+                </div>
+
+                <div class="step-card">
+                    <div class="step-header">
+                        <span class="step-number">4</span>
+                        <h3 class="step-title">Gunakan Voucher (Opsional)</h3>
+                    </div>
+                    <div class="input-group">
+                        <input type="text" id="voucher-input" placeholder="Masukkan kode voucher">
+                        <button class="btn btn-apply" id="voucher-btn">Terapkan</button>
+                    </div>
+                    <div class="voucher-actions">
+                        <button class="btn btn-list" id="voucher-list-btn">Lihat Daftar Promo</button>
+                    </div>
+                    <p id="voucher-status" class="status-text"></p>
+                </div>
+            </section>
+
+            <section class="summary-section">
+                <div class="summary-card">
+                    <table class="summary-table">
+                        <thead>
+                            <tr>
+                                <th colspan="2">Ringkasan Pembelian</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr><td>Produk</td><td id="summary-product">-</td></tr>
+                            <tr id="summary-discount-row" style="display: none;"><td>Diskon</td><td id="summary-discount"></td></tr>
+                            <tr><td>Metode Bayar</td><td id="summary-payment">-</td></tr>
+                            <tr class="summary-total-row"><td>Total Bayar</td><td id="summary-total">Rp 0</td></tr>
+                        </tbody>
+                    </table>
+                    <button class="btn btn-checkout" id="checkout-btn" disabled>Beli Sekarang</button>
+                </div>
+            </section>
+        </div>
+    </main>
+
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2024 Walz Shop. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <div class="modal-overlay" id="modal-overlay">
+        <div class="modal" id="promo-list-modal"></div>
+        <div class="modal" id="checkout-modal"></div>
+        <div class="modal" id="error-modal"></div>
     </div>
-  </main>
 
-  <footer class="footer">
-    <div class="container">
-      <p>&copy; 2025 Walz Shop. Semua hak dilindungi.</p>
-    </div>
-  </footer>
-  
-  <!-- Modal -->
-  <div id="modal-overlay" class="modal-overlay">
-    <div id="checkout-modal" class="modal"></div>
-    <div id="promo-list-modal" class="modal"></div>
-    <div id="error-modal" class="modal"></div>
-  </div>
-  
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
